--- a/dietersDilemma.html
+++ b/dietersDilemma.html
@@ -1276,7 +1276,7 @@
                 </div>
                 {CONFIG.currentSymbol && (
                   <div
-                    className="transform scale-75 origin-left"
+                    style={{ transform: 'scale(0.6)', transformOrigin: 'left center' }}
                     dangerouslySetInnerHTML={{ __html: CONFIG.currentSymbol }}
                   />
                 )}
