--- a/dagElicitation.html
+++ b/dagElicitation.html
@@ -311,98 +311,103 @@
 
       const hasAnyEdge = edges.length > 0;
 
-      // Confidence question screen
+      // Confidence question screen - same panel layout as DAG drawing
       if (showConfidence) {
         return (
-          <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 p-4 flex items-center justify-center">
-            <div className="bg-white rounded-2xl shadow-2xl p-8 max-w-xl w-full">
-              <h2 className="text-xl font-bold text-gray-800 mb-4">
-                How confident are you in your diagram?
-              </h2>
-              <p className="text-gray-600 mb-2">
-                That is, what is the chance it correctly shows who can influence whom?
-              </p>
-
-              <p className="text-sm text-gray-500 mb-4">
-                The payment mechanism is set up such that you will earn the most by answering truthfully.{' '}
-                <button
-                  onClick={() => setShowDetails(!showDetails)}
-                  className="text-blue-600 hover:text-blue-800 underline"
-                >
-                  {showDetails ? 'Hide details' : 'Show details'}
-                </button>
-              </p>
-
-              {showDetails && (
-                <div className="bg-gray-50 rounded-lg p-4 mb-4 text-sm text-gray-700">
-                  <p className="mb-2">Here's how the payment system works:</p>
-                  <ol className="list-decimal list-inside space-y-2">
-                    <li>After you enter your confidence, we will randomly draw a number <strong>X</strong> between 0 and 100.</li>
-                    <li>If your stated confidence is <strong>greater than X%</strong>:
-                      <ul className="list-disc list-inside ml-4 mt-1">
-                        <li>You will receive a bonus if the "who influences whom" relationship you provided is correct.</li>
-                      </ul>
-                    </li>
-                    <li>If your stated confidence is <strong>less than X</strong>:
-                      <ul className="list-disc list-inside ml-4 mt-1">
-                        <li>You will have a X% chance of receiving the bonus, regardless of whether your answer was correct.</li>
-                      </ul>
-                    </li>
-                  </ol>
-                  <p className="mt-3">
-                    This setup ensures that <strong>you maximize your expected payment by reporting your true confidence</strong>.
-                    Overstating or understating your confidence will only reduce your chance of earning the bonus.
+          <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 p-4">
+            <div className="max-w-4xl mx-auto">
+              <div className="bg-white rounded-2xl shadow-2xl p-6">
+                <div className="mb-4">
+                  <h2 className="text-2xl font-bold text-gray-800 mb-3 text-center">
+                    How confident are you in your diagram?
+                  </h2>
+                  <p className="text-gray-600 text-center mb-2">
+                    That is, what is the chance it correctly shows who can influence whom?
                   </p>
-                </div>
-              )}
+                  <p className="text-sm text-gray-500 text-center mb-4">
+                    The payment mechanism is set up such that you will earn the most by answering truthfully.{' '}
+                    <button
+                      onClick={() => setShowDetails(!showDetails)}
+                      className="text-blue-600 hover:text-blue-800 underline"
+                    >
+                      {showDetails ? 'Hide details' : 'Show details'}
+                    </button>
+                  </p>
 
-              <div className="mb-6">
-                {/* Tick marks */}
-                <div className="flex justify-between text-xs text-gray-500 mb-1 px-1">
-                  {[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100].map(val => (
-                    <span key={val} className={val % 50 === 0 ? 'font-medium' : 'text-gray-400'}>{val}</span>
-                  ))}
+                  {showDetails && (
+                    <div className="bg-gray-50 rounded-lg p-4 mb-4 text-sm text-gray-700 max-w-2xl mx-auto">
+                      <p className="mb-2">Here's how the payment system works:</p>
+                      <ol className="list-decimal list-inside space-y-2">
+                        <li>After you enter your confidence, we will randomly draw a number <strong>X</strong> between 0 and 100.</li>
+                        <li>If your stated confidence is <strong>greater than X%</strong>:
+                          <ul className="list-disc list-inside ml-4 mt-1">
+                            <li>You will receive a bonus if the "who influences whom" relationship you provided is correct.</li>
+                          </ul>
+                        </li>
+                        <li>If your stated confidence is <strong>less than X</strong>:
+                          <ul className="list-disc list-inside ml-4 mt-1">
+                            <li>You will have a X% chance of receiving the bonus, regardless of whether your answer was correct.</li>
+                          </ul>
+                        </li>
+                      </ol>
+                      <p className="mt-3">
+                        This setup ensures that <strong>you maximize your expected payment by reporting your true confidence</strong>.
+                        Overstating or understating your confidence will only reduce your chance of earning the bonus.
+                      </p>
+                    </div>
+                  )}
                 </div>
-                {/* Grid lines */}
-                <div className="relative">
-                  <div className="absolute inset-0 flex justify-between px-1 pointer-events-none">
-                    {[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100].map(val => (
-                      <div key={val} className={`w-px ${val % 50 === 0 ? 'h-4 bg-gray-400' : 'h-2 bg-gray-300'}`} style={{marginTop: val % 50 === 0 ? '0' : '4px'}} />
-                    ))}
+
+                <div className="max-w-2xl mx-auto">
+                  <div className="mb-6">
+                    {/* Tick marks */}
+                    <div className="flex justify-between text-xs text-gray-500 mb-1 px-1">
+                      {[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100].map(val => (
+                        <span key={val} className={val % 50 === 0 ? 'font-medium' : 'text-gray-400'}>{val}</span>
+                      ))}
+                    </div>
+                    {/* Grid lines */}
+                    <div className="relative">
+                      <div className="absolute inset-0 flex justify-between px-1 pointer-events-none">
+                        {[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100].map(val => (
+                          <div key={val} className={`w-px ${val % 50 === 0 ? 'h-4 bg-gray-400' : 'h-2 bg-gray-300'}`} style={{marginTop: val % 50 === 0 ? '0' : '4px'}} />
+                        ))}
+                      </div>
+                      <input
+                        type="range"
+                        min="0"
+                        max="100"
+                        step="1"
+                        value={confidence !== null ? confidence : 50}
+                        onMouseDown={(e) => {
+                          const rect = e.target.getBoundingClientRect();
+                          const percent = Math.round(((e.clientX - rect.left) / rect.width) * 100);
+                          setConfidence(Math.max(0, Math.min(100, percent)));
+                        }}
+                        onChange={(e) => setConfidence(parseInt(e.target.value))}
+                        className={`w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-blue-600 relative z-10 ${confidence === null ? 'slider-hidden-thumb' : ''}`}
+                      />
+                    </div>
+                    <div className="text-center mt-3">
+                      <span className="text-3xl font-bold text-blue-600">
+                        {confidence !== null ? `${confidence}%` : '—'}
+                      </span>
+                    </div>
                   </div>
-                  <input
-                    type="range"
-                    min="0"
-                    max="100"
-                    step="1"
-                    value={confidence !== null ? confidence : 50}
-                    onMouseDown={(e) => {
-                      const rect = e.target.getBoundingClientRect();
-                      const percent = Math.round(((e.clientX - rect.left) / rect.width) * 100);
-                      setConfidence(Math.max(0, Math.min(100, percent)));
-                    }}
-                    onChange={(e) => setConfidence(parseInt(e.target.value))}
-                    className={`w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-blue-600 relative z-10 ${confidence === null ? 'slider-hidden-thumb' : ''}`}
-                  />
-                </div>
-                <div className="text-center mt-3">
-                  <span className="text-3xl font-bold text-blue-600">
-                    {confidence !== null ? `${confidence}%` : '—'}
-                  </span>
+
+                  <button
+                    onClick={handleConfidenceSubmit}
+                    disabled={confidence === null}
+                    className={`w-full py-3 rounded-lg font-medium text-lg ${
+                      confidence !== null
+                        ? 'bg-blue-600 hover:bg-blue-700 text-white'
+                        : 'bg-gray-300 text-gray-500 cursor-not-allowed'
+                    }`}
+                  >
+                    Continue
+                  </button>
                 </div>
               </div>
-
-              <button
-                onClick={handleConfidenceSubmit}
-                disabled={confidence === null}
-                className={`w-full py-3 rounded-lg font-medium text-lg ${
-                  confidence !== null
-                    ? 'bg-blue-600 hover:bg-blue-700 text-white'
-                    : 'bg-gray-300 text-gray-500 cursor-not-allowed'
-                }`}
-              >
-                Continue
-              </button>
             </div>
           </div>
         );
