--- a/dagElicitation.html
+++ b/dagElicitation.html
@@ -322,7 +322,7 @@
                     How confident are you in your diagram?
                   </h2>
                   <p className="text-gray-600 text-center mb-2">
-                    That is, what is the chance it correctly shows who can influence whom?
+                    That is, what is the chance it correctly shows how these factors influenced each other?
                   </p>
                   <p className="text-sm text-gray-500 text-center mb-4">
                     The payment mechanism is set up such that you will earn the most by answering truthfully.{' '}
@@ -367,7 +367,15 @@
                       ))}
                     </div>
                     {/* Grid lines */}
-                    <div className="relative">
+                    <div
+                      className="relative cursor-pointer"
+                      onClick={(e) => {
+                        // Calculate click position and set confidence
+                        const rect = e.currentTarget.getBoundingClientRect();
+                        const percent = Math.round(((e.clientX - rect.left) / rect.width) * 100);
+                        setConfidence(Math.max(0, Math.min(100, percent)));
+                      }}
+                    >
                       <div className="absolute inset-0 flex justify-between px-1 pointer-events-none">
                         {[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100].map(val => (
                           <div key={val} className={`w-px ${val % 50 === 0 ? 'h-4 bg-gray-400' : 'h-2 bg-gray-300'}`} style={{marginTop: val % 50 === 0 ? '0' : '4px'}} />
@@ -379,13 +387,9 @@
                         max="100"
                         step="1"
                         value={confidence !== null ? confidence : 50}
-                        onMouseDown={(e) => {
-                          const rect = e.target.getBoundingClientRect();
-                          const percent = Math.round(((e.clientX - rect.left) / rect.width) * 100);
-                          setConfidence(Math.max(0, Math.min(100, percent)));
-                        }}
                         onChange={(e) => setConfidence(parseInt(e.target.value))}
                         className={`w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer accent-blue-600 relative z-10 ${confidence === null ? 'slider-hidden-thumb' : ''}`}
+                        style={{ pointerEvents: confidence === null ? 'none' : 'auto' }}
                       />
                     </div>
                     <div className="text-center mt-3">
