--- a/dagElicitation.html
+++ b/dagElicitation.html
@@ -311,17 +311,89 @@
 
       const hasAnyEdge = edges.length > 0;
 
-      // Confidence question screen - same panel layout as DAG drawing
+      // Confidence question screen - shows final DAG and confidence slider below
       if (showConfidence) {
+        // Get the edges to display (finalEdges or current edges)
+        const displayEdges = finalEdges || edges;
+
         return (
           <div className="min-h-screen bg-gradient-to-br from-slate-900 to-slate-800 p-4">
             <div className="max-w-4xl mx-auto">
               <div className="bg-white rounded-2xl shadow-2xl p-6">
-                <div className="mb-4">
+                {/* Display the final DAG */}
+                <div className="mb-6">
+                  <svg
+                    viewBox="0 0 700 400"
+                    className="w-full bg-gray-50 rounded-xl border-2 border-gray-200"
+                  >
+                    <defs>
+                      <marker id="arrowhead-final" markerWidth="10" markerHeight="7" refX="9" refY="3.5" orient="auto">
+                        <polygon points="0 0, 10 3.5, 0 7" fill="#dc2626" />
+                      </marker>
+                    </defs>
+
+                    {/* Edges */}
+                    {displayEdges.map((edge, idx) => {
+                      const hasBothWays = displayEdges.some(e => e.from === edge.to && e.to === edge.from);
+                      let curveDir = 1;
+                      if (hasBothWays) {
+                        const sortedPair = [edge.from, edge.to].sort().join('-');
+                        const isFirstDirection = edge.from + '-' + edge.to === sortedPair;
+                        curveDir = isFirstDirection ? 1 : -1;
+                      }
+                      const path = getArrowPath(edge.from, edge.to, curveDir);
+
+                      return (
+                        <path
+                          key={`${edge.from}-${edge.to}`}
+                          d={path.pathD}
+                          fill="none"
+                          stroke="#dc2626"
+                          strokeWidth={3}
+                          markerEnd="url(#arrowhead-final)"
+                        />
+                      );
+                    })}
+
+                    {/* Nodes */}
+                    {nodes.map(node => (
+                      <g key={node.id}>
+                        <circle
+                          cx={node.x}
+                          cy={node.y}
+                          r={40}
+                          fill="white"
+                          stroke="#374151"
+                          strokeWidth={2}
+                        />
+                        <text
+                          x={node.x}
+                          y={node.y}
+                          textAnchor="middle"
+                          dominantBaseline="central"
+                          className="text-2xl pointer-events-none"
+                        >
+                          {node.icon}
+                        </text>
+                        <text
+                          x={node.x}
+                          y={node.y + 60}
+                          textAnchor="middle"
+                          className="text-sm font-medium fill-gray-700 pointer-events-none"
+                        >
+                          {node.label}
+                        </text>
+                      </g>
+                    ))}
+                  </svg>
+                </div>
+
+                {/* Confidence slider */}
+                <div className="max-w-2xl mx-auto">
                   <h2 className="text-2xl font-bold text-gray-800 mb-3 text-center">
                     How confident are you in your diagram?
                   </h2>
-                  <p className="text-gray-600 text-center mb-2">
+                  <p className="text-gray-600 text-center mb-4">
                     That is, what is the chance it correctly shows how these factors influenced each other?
                   </p>
                   <p className="text-sm text-gray-500 text-center mb-4">
@@ -335,7 +407,7 @@
                   </p>
 
                   {showDetails && (
-                    <div className="bg-gray-50 rounded-lg p-4 mb-4 text-sm text-gray-700 max-w-2xl mx-auto">
+                    <div className="bg-gray-50 rounded-lg p-4 mb-4 text-sm text-gray-700">
                       <p className="mb-2">Here's how the payment system works:</p>
                       <ol className="list-decimal list-inside space-y-2">
                         <li>After you enter your confidence, we will randomly draw a number <strong>X</strong> between 0 and 100.</li>
@@ -356,9 +428,7 @@
                       </p>
                     </div>
                   )}
-                </div>
 
-                <div className="max-w-2xl mx-auto">
                   <div className="mb-6">
                     {/* Tick marks */}
                     <div className="flex justify-between text-xs text-gray-500 mb-1 px-1">
